--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <h1> <img src="./images/notes.png">Notes</h1>
-    <button> <img src="./images/edit.png">Create a Note</button>
+    <button class="btn"> <img src="./images/edit.png">Create a Note</button>
     <div class="notes-container">
         <!-- <p contenteditable="true" class="input-box">
             <img src="images/delete.png">
